<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="type_something">Type Something...</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="judul">Judul</string>
    <string name="save">Save</string>
    <string name="riwayat">RIWAYAT</string>
    <string name="hasil">hasil</string>
    <string name="news_cancer">NEWS CANCER</string>
</resources>