<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/history"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder"/>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/main"
            android:text="@string/result" />

        <Button
            android:id="@+id/saveHistory"
            android:layout_gravity="center"
            android:backgroundTint="@color/main"
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>