<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/ivNews"
        app:srcCompat="@color/main"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:padding="5dp"
        android:background="@drawable/bg"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:paddingHorizontal="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvTitle"
            android:textColor="@color/main"
            android:text="@string/judul"
            android:textSize="12sp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingHorizontal="15sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvDeskripsi"
            android:textColor="@color/main"
            android:text="@string/deskripsi"
            android:textSize="11sp"
            android:paddingVertical="2dp"
            android:maxLines="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>



</LinearLayout>